name:                cedille-parser
version:             0.1.0
synopsis:            Parser for Cedille Proof Assistant
--license:             
--license-file:        LICENSE
--author:              
--maintainer:          
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CedilleLexer
                     , CedilleParser
                     , CedilleTypes
  build-depends:       base >=4.9 && <4.10 
                     , array               
                     , HUnit
                     , unicode-show
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable cedille-parser
  main-is:             cedille-parser.hs
  hs-source-dirs:      src
  other-modules:       CedilleLexer
                     , CedilleParser
                     , CedilleTypes
  -- other-extensions:
  build-depends:       base >=4.7
                     , bytestring
                     , array
                     , unicode-show
  -- hs-source-dirs:
  default-language:    Haskell2010

Test-Suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base >=4.9 && <4.10
                     , HUnit
                     , cedille-parser
                     , Cabal >=1.24 && <1.25
  default-language:  Haskell2010
  

